--- a/shippable.yml
+++ b/shippable.yml
@@ -8,3 +8,4 @@ build:
   - sudo pip install -r requirements.txt
   - nose2 --plugin nose2.plugins.junitxml --junit-xml --with-coverage
   - mv nose2-junit.xml shippable/testresults/tests.xml
+  - coverage xml -o shippable/codecoverage/coverage.xml
