Added command to run pre-commit as part of CI

--- a/shippable.yml
+++ b/shippable.yml
@@ -9,3 +9,4 @@ build:
   - nose2 --plugin nose2.plugins.junitxml --junit-xml --with-coverage
   - mv nose2-junit.xml shippable/testresults/tests.xml
   - coverage xml -o shippable/codecoverage/coverage.xml
+  - pre-commit run --all-files
